# perfbit

./: .env  .gitignore  docker-compose.yml
.github/workflows/: go.yml
apis/: build.gradle
auth-service/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum
auth-service/cmd/: main.go
commit-service/: go.mod
contribution-service/: go.mod
dashboard-service/: .env  Cargo.toml  diesel.toml  go.mod
dashboard-service/migrations/2024-07-20-171726_create_users/: down.sql  up.sql
dashboard-service/src/: handlers.rs  main.rs  models.rs  schema.rs
dev-performance-analytics/: Dockerfile  docker-compose.yml  go.mod  go.sum  wait-for-it.sh
dev-performance-analytics-ui/: package-lock.json  package.json
dev-performance-analytics-ui/src/: App.js  index.js
dev-performance-analytics/cmd/: main.go  pg_session_store.go
dev-performance-analytics/common/: types.go
dev-performance-analytics/docs/: docs.go  swagger.json  swagger.yaml
dev-performance-analytics/postman/: doc.json
dev-performance-analytics/sql/: alter_scripts.sql
kurm/auth-service/: .env  README.md  docker healthcheck  (+2 more)
metrics-service/: go.mod
nextjs-auth-ui/: package-lock.json  package.json
repo-service/: go.mod
repo-service/repo-service/: Cargo.toml
repo-service/repo-service/migrations/: 20240721133515_create_initial_tables.sql
repo-service/repo-service/src/: main.rs
repo-service/repo-service/src/handlers/: branch.rs  commit.rs  git.rs  github.rs  mod.rs  repository.rs
repo-service/repo-service/src/models/: branch.rs  commit.rs  git.rs  repository.rs
reporting-service/: go.mod
(+75 files in other folders)
