[package]
name = "repo-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-postgres = "0.7"
deadpool-postgres = { version = "0.8", features = ["tokio1"] }