[package]
name = "repo-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["json"] }
tokio-postgres = "0.7.10"
deadpool-postgres = { version = "0.14.0", features = ["tokio1"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "migrate" ] }
dotenv = "0.15.0"